plugins/zoom: do colorspace conversions between the screen textures

Otherwise colors and especially brightness levels can be quite wrong when
the textures are used on a different screen

BUG: 488839